--- a/views/defprops.html
+++ b/views/defprops.html
@@ -330,8 +330,9 @@
 						{title: "Line", field: "line", hozAlign: "center"},
 						{title: "", field: "diff", hozAlign: "center", visible: false},
 						{title: "SZN AVG", field: "avg", hozAlign: "center", formatter: colorFormatter},
-						{title: "Total Over", field: "totalOver", formatter: percentFormatter, hozAlign: "center", width:80, sorter:"number"},
+						{title: "% Over", field: "totalOver", formatter: percentFormatter, hozAlign: "center", width:80, sorter:"number"},
 						{title: "Last", field: "last5WithLines", hozAlign: "center"},
+						{title: "LYR % Over", field: "lastTotalOver", formatter: percentFormatter, hozAlign: "center", width:80, sorter:"number"},
 						{title: "Over", field: "overOdds", hozAlign: "center"},
 						{title: "Under", field: "underOdds", hozAlign: "center"},
 					]
