--- a/views/bets.html
+++ b/views/bets.html
@@ -69,7 +69,7 @@
 					{% for team in bet["players"] %}
 						<div class="odds">{{team}}</div>
 						{% for player in bet["players"][team] %}
-							{% set last = player.split("\t")[0].replace(" jr", "").replace(" iv", "").split(" ")[-1] %}
+							{% set last = player.split("\t")[0].replace(" jr", "").replace(" iii", "").replace(" iv", "").split(" ")[-1] %}
 							{% set line = player.split("\t")[1] %}
 							{% set prop = line.split(" ")[1] %}
 							<div class="row {{team}}_{{last}}_{{prop}}">
@@ -101,7 +101,7 @@
 			for (sport in data) {
 				for (team in data[sport]["scores"]) {
 					for (player in data[sport]["scores"][team]) {
-						const sp = player.replace(" jr", "").replace(" iv", "").split(" ");
+						const sp = player.replace(" jr", "").replace(" iii", "").replace(" iv", "").split(" ");
 						const last = sp[sp.length - 1];
 						for (prop in data[sport]["scores"][team][player]) {
 							const rows = document.getElementsByClassName([team, last, prop].join("_"));
