--- a/views/betting.html
+++ b/views/betting.html
@@ -440,7 +440,7 @@
 					{title: "A-H Splits", field: "awayHomeSplits", hozAlign: "center", visible: true, formatter:splitsFormatter, responsive: 0},
 					{title: "Total Over", field: "totalOver", width: 80, hozAlign: "center", formatter: percentFormatter, sorter: "number", visible: true},
 					{title: "L5 Total Over", field: "totalOverLast5", width: 80, hozAlign: "center", formatter: percentFormatter, sorter: "number", visible: true},
-					{title: "Last ➡️", field: "last5", hozAlign: "center", visible: true},
+					{title: "Last ➡️", field: "last5", hozAlign: "center", visible: true, width: 200},
 					{title: "Last YR AVG", field: "lastAvg", hozAlign: "center", width: 80, formatter: colorFormatter, visible: true},
 					{title: "Last YR Total Over", field: "lastTotalOver", width: 80, hozAlign: "center", formatter: percentFormatter, visible: true},
 					{title: "Played Yesterday", field: "playedYesterday", hozAlign: "center", width: 70, visible: false},
